--- a/index.html
+++ b/index.html
@@ -6,27 +6,73 @@
     <meta charset="utf-8" />
     <meta name="author" content="César Augusto" />
 
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1>Finalização de Desafios BP</h1>
 
-    <div class="box">
-      <div class="text-content">
-        <div class="container">
-          <h2>Resultado: Eu venci!</h2>
+    <div class="main-box">
+      <div class="box box-venci">
+        <div class="text-content">
+          <div class="container">
+            <h2>Resultado: Vitória</h2>
+            <h3>Eu venci a partida!</h3>
 
-          <p>Print:</p>
-          <input class="print-desafio" type="file" />
+            <p>Print:</p>
+            <div class="print-desafio"></div>
+            <!-- <input class="print-desafio" type="file" /> -->
 
-          <div class="bottom">
-            <a href="#">Enviar</a>
-            <p class="aviso">
-              Enviar prints inválidos ou tentar burlar a verificação resultará
-              em penalidade.
-            </p>
+            <div class="btn">
+              <a href="#">Enviar</a>
+              <p class="aviso">
+                Enviar prints inválidos ou tentar burlar a verificação resultará
+                em penalidade.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="box box-empatei">
+        <div class="text-content">
+          <div class="container">
+            <h2>Resultado: Empate</h2>
+            <h3>Houve um erro na partida ou terminou empatada.</h3>
+
+            <p>Print:</p>
+            <div class="print-desafio"></div>
+            <!-- <input class="print-desafio" type="file" /> -->
+
+            <div class="btn">
+              <a href="#">Enviar</a>
+              <p class="aviso">
+                Enviar prints inválidos ou tentar burlar a verificação resultará
+                em penalidade.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="box box-perdi">
+        <div class="text-content">
+          <div class="container">
+            <h2>Resultado: Derrota</h2>
+            <h3>Eu perdi a partida!</h3>
+
+            <p>Print:</p>
+            <div class="print-desafio"></div>
+            <!-- <input class="print-desafio" type="file" /> -->
+
+            <div class="btn">
+              <a href="#">Enviar</a>
+              <p class="aviso">
+                Enviar prints inválidos ou tentar burlar a verificação resultará
+                em penalidade.
+              </p>
+            </div>
           </div>
         </div>
       </div>
